--- a/index.html
+++ b/index.html
@@ -240,17 +240,115 @@
             {
               variant: 'default',
               content: [
-                ...createNameEntry('1', 'ٱللَّهُ', 'Allah'), ...createNameEntry('2', 'ٱلرَّحْمَـٰنُ', 'The Beneficent'), ...createNameEntry('3', 'ٱلرَّحِيمُ', 'The Merciful'), ...createNameEntry('4', 'ٱلْمَلِكُ', 'The King'), ...createNameEntry('5', 'ٱلْقُدُّوسُ', 'The Most Sacred'), ...createNameEntry('6', 'ٱلسَّلَـٰمُ', 'The Source of Peace'), ...createNameEntry('7', 'ٱلْمُؤْمِنُ', 'The Faithful'), ...createNameEntry('8', 'ٱلْمُهَيْمِنُ', 'The Guardian'), ...createNameEntry('9', 'ٱلْعَزِيزُ', 'The Almighty'), ...createNameEntry('10', 'ٱلْجَبَّارُ', 'The Compeller'),
-                ...createNameEntry('11', 'ٱلْمُتَكَبِّرُ', 'The Supreme'), ...createNameEntry('12', 'ٱلْخَـٰلِقُ', 'The Creator'), ...createNameEntry('13', 'ٱلْبَارِئُ', 'The Originator'), ...createNameEntry('14', 'ٱلْمُصَوِّرُ', 'The Fashioner'), ...createNameEntry('15', 'ٱلْغَفَّارُ', 'The All-Forgiving'), ...createNameEntry('16', 'ٱلْقَهَّارُ', 'The All-Victorious'), ...createNameEntry('17', 'ٱلْوَهَّابُ', 'The Giver'), ...createNameEntry('18', 'ٱلرَّزَّاقُ', 'The Provider'), ...createNameEntry('19', 'ٱلْفَتَّاحُ', 'The Opener'), ...createNameEntry('20', 'ٱلْعَلِيمُ', 'The All-Knowing'),
-                ...createNameEntry('21', 'ٱلْقَابِضُ', 'The Withholder'), ...createNameEntry('22', 'ٱلْبَاسِطُ', 'The Expander'), ...createNameEntry('23', 'ٱلْخَافِضُ', 'The Humbler'), ...createNameEntry('24', 'ٱلرَّافِعُ', 'The Elevator'), ...createNameEntry('25', 'ٱلْمُعِزُّ', 'The Honourer'), ...createNameEntry('26', 'ٱلْمُذِلُّ', 'The Dishonourer'), ...createNameEntry('27', 'ٱلسَّمِيعُ', 'The All-Hearing'), ...createNameEntry('28', 'ٱلْبَصِيرُ', 'The All-Seeing'), ...createNameEntry('29', 'ٱلْحَكَمُ', 'The Judge'), ...createNameEntry('30', 'ٱلْعَدْلُ', 'The Just'),
-                ...createNameEntry('31', 'ٱللَّطِيفُ', 'The Subtle'), ...createNameEntry('32', 'ٱلْخَبِيرُ', 'The All-Aware'), ...createNameEntry('33', 'ٱلْحَلِيمُ', 'The Forbearing'), ...createNameEntry('34', 'ٱلْعَظِيمُ', 'The Magnificent'), ...createNameEntry('35', 'ٱلْغَفُورُ', 'The Forgiving'), ...createNameEntry('36', 'ٱلشَّكُورُ', 'The Grateful'), ...createNameEntry('37', 'ٱلْعَلِىُّ', 'The High'), ...createNameEntry('38', 'ٱلْكَبِيرُ', 'The Great'), ...createNameEntry('39', 'ٱلْحَفِيظُ', 'The Guardian'), ...createNameEntry('40', 'ٱلْمُقِيتُ', 'The Nourisher'),
-                ...createNameEntry('41', 'ٱلْحَسِيبُ', 'The Reckoner'), ...createNameEntry('42', 'ٱلْجَلِيلُ', 'The Majestic'), ...createNameEntry('43', 'ٱلْكَرِيمُ', 'The Generous'), ...createNameEntry('44', 'ٱلرَّقِيبُ', 'The Watcher'), ...createNameEntry('45', 'ٱلْمُجِيبُ', 'The Answerer'), ...createNameEntry('46', 'ٱلْوَاسِعُ', 'The Vast'), ...createNameEntry('47', 'ٱلْحَكِيمُ', 'The Wise'), ...createNameEntry('48', 'ٱلْوَدُودُ', 'The Loving'), ...createNameEntry('49', 'ٱلْمَجِيدُ', 'The Glorious'), ...createNameEntry('50', 'ٱلْبَاعِثُ', 'The Resurrector'),
-                ...createNameEntry('51', 'ٱلشَّهِيدُ', 'The Witness'), ...createNameEntry('52', 'ٱلْحَقُّ', 'The Truth'), ...createNameEntry('53', 'ٱلْوَكِيلُ', 'The Trustee'), ...createNameEntry('54', 'ٱلْقَوِىُّ', 'The Strong'), ...createNameEntry('55', 'ٱلْمَتِينُ', 'The Firm'), ...createNameEntry('56', 'ٱلْوَلِىُّ', 'The Protecting Friend'), ...createNameEntry('57', 'ٱلْحَمِيدُ', 'The Praiseworthy'), ...createNameEntry('58', 'ٱلْمُحْصِى', 'The Counter'), ...createNameEntry('59', 'ٱلْمُبْدِئُ', 'The Originator'), ...createNameEntry('60', 'ٱلْمُعِيدُ', 'The Returner'),
-                ...createNameEntry('61', 'ٱلْمُحْيِى', 'The Reviver'), ...createNameEntry('62', 'ٱلْمُمِيتُ', 'The Giver of Death'), ...createNameEntry('63', 'ٱلْحَىُّ', 'The Living'), ...createNameEntry('64', 'ٱلْقَيُّومُ', 'The Self-Sustaining'), ...createNameEntry('65', 'ٱلْوَاجِدُ', 'The Perceiver'), ...createNameEntry('66', 'ٱلْمَاجِدُ', 'The Illustrious'), ...createNameEntry('67', 'ٱلْوَاحِدُ', 'The One'), ...createNameEntry('68', 'ٱلصَّمَدُ', 'The Eternal'), ...createNameEntry('69', 'ٱلْقَادِرُ', 'The All-Powerful'), ...createNameEntry('70', 'ٱلْمُقْتَدِرُ', 'The Omnipotent'),
-                ...createNameEntry('71', 'ٱلْمُقَدِّمُ', 'The Advancer'), ...createNameEntry('72', 'ٱلْمُؤَخِّرُ', 'The Deferrer'), ...createNameEntry('73', 'ٱلْأَوَّلُ', 'The First'), ...createNameEntry('74', 'ٱلْآخِرُ', 'The Last'), ...createNameEntry('75', 'ٱلظَّاهِرُ', 'The Manifest'), ...createNameEntry('76', 'ٱلْبَاطِنُ', 'The Hidden'), ...createNameEntry('77', 'ٱلْوَالِى', 'The Patron'), ...createNameEntry('78', 'ٱلْمُتَعَالِى', 'The Self-Exalted'), ...createNameEntry('79', 'ٱلْبَرُّ', 'The Benign'), ...createNameEntry('80', 'ٱلتَّوَّابُ', 'The Acceptor of Repentance'),
-                ...createNameEntry('81', 'ٱلْمُنتَقِمُ', 'The Avenger'), ...createNameEntry('82', 'ٱلْعَفُوُّ', 'The Pardoner'), ...createNameEntry('83', 'ٱلرَّءُوفُ', 'The Compassionate'), ...createNameEntry('84', 'مَالِكُ ٱلْمُلْكِ', 'The Possessor of the Kingdom'), ...createNameEntry('85', 'ذُو ٱلْجَلَالِ وَٱلْإِكْرَامِ', 'Lord of Majesty and Honour'), ...createNameEntry('86', 'ٱلْمُقْسِطُ', 'The Equitable'), ...createNameEntry('87', 'ٱلْجَامِعُ', 'The Gatherer'), ...createNameEntry('88', 'ٱلْغَنِىُّ', 'The Rich'), ...createNameEntry('89', 'ٱلْمُغْنِى', 'The Enricher'),
-                ...createNameEntry('90', 'ٱلْمَانِعُ', 'The Withholder'), ...createNameEntry('91', 'ٱلضَّارُّ', 'The Afflicter'), ...createNameEntry('92', 'ٱلنَّافِعُ', 'The Benefactor'), ...createNameEntry('93', 'ٱلنُّورُ', 'The Light'), ...createNameEntry('94', 'ٱلْهَادِى', 'The Guide'), ...createNameEntry('95', 'ٱلْبَدِيعُ', 'The Originator'), ...createNameEntry('96', 'ٱلْبَاقِى', 'The Everlasting'), ...createNameEntry('97', 'ٱلْوَارِثُ', 'The Heir'), ...createNameEntry('98', 'ٱلرَّشِيدُ', 'The Guide to the Right Path'), ...createNameEntry('99', 'ٱلصَّبُورُ', 'The Patient')
-              ]
+                ...createNameEntry('1', 'ٱللَّهُ جَلَّ جَلَالُهُ', 'Allah, He is exalted!'),
+...createNameEntry('2', 'ٱلرَّحْمَـٰنُ جَلَّ جَلَالُهُ', 'The Beneficent, He is exalted!'),
+...createNameEntry('3', 'ٱلرَّحِيمُ جَلَّ جَلَالُهُ', 'The Merciful, He is exalted!'),
+...createNameEntry('4', 'ٱلْمَلِكُ جَلَّ جَلَالُهُ', 'The King, He is exalted!'),
+...createNameEntry('5', 'ٱلْقُدُّوسُ جَلَّ جَلَالُهُ', 'The Most Sacred, He is exalted!'),
+...createNameEntry('6', 'ٱلسَّلَـٰمُ جَلَّ جَلَالُهُ', 'The Source of Peace, He is exalted!'),
+...createNameEntry('7', 'ٱلْمُؤْمِنُ جَلَّ جَلَالُهُ', 'The Faithful, He is exalted!'),
+...createNameEntry('8', 'ٱلْمُهَيْمِنُ جَلَّ جَلَالُهُ', 'The Guardian, He is exalted!'),
+...createNameEntry('9', 'ٱلْعَزِيزُ جَلَّ جَلَالُهُ', 'The Almighty, He is exalted!'),
+...createNameEntry('10', 'ٱلْجَبَّارُ جَلَّ جَلَالُهُ', 'The Compeller, He is exalted!'),
+
+...createNameEntry('11', 'ٱلْمُتَكَبِّرُ جَلَّ جَلَالُهُ', 'The Supreme, He is exalted!'),
+...createNameEntry('12', 'ٱلْخَـٰلِقُ جَلَّ جَلَالُهُ', 'The Creator, He is exalted!'),
+...createNameEntry('13', 'ٱلْبَارِئُ جَلَّ جَلَالُهُ', 'The Originator, He is exalted!'),
+...createNameEntry('14', 'ٱلْمُصَوِّرُ جَلَّ جَلَالُهُ', 'The Fashioner, He is exalted!'),
+...createNameEntry('15', 'ٱلْغَفَّارُ جَلَّ جَلَالُهُ', 'The All-Forgiving, He is exalted!'),
+...createNameEntry('16', 'ٱلْقَهَّارُ جَلَّ جَلَالُهُ', 'The All-Victorious, He is exalted!'),
+...createNameEntry('17', 'ٱلْوَهَّابُ جَلَّ جَلَالُهُ', 'The Giver, He is exalted!'),
+...createNameEntry('18', 'ٱلرَّزَّاقُ جَلَّ جَلَالُهُ', 'The Provider, He is exalted!'),
+...createNameEntry('19', 'ٱلْفَتَّاحُ جَلَّ جَلَالُهُ', 'The Opener, He is exalted!'),
+...createNameEntry('20', 'ٱلْعَلِيمُ جَلَّ جَلَالُهُ', 'The All-Knowing, He is exalted!'),
+
+...createNameEntry('21', 'ٱلْقَابِضُ جَلَّ جَلَالُهُ', 'The Withholder, He is exalted!'),
+...createNameEntry('22', 'ٱلْبَاسِطُ جَلَّ جَلَالُهُ', 'The Expander, He is exalted!'),
+...createNameEntry('23', 'ٱلْخَافِضُ جَلَّ جَلَالُهُ', 'The Humbler, He is exalted!'),
+...createNameEntry('24', 'ٱلرَّافِعُ جَلَّ جَلَالُهُ', 'The Elevator, He is exalted!'),
+...createNameEntry('25', 'ٱلْمُعِزُّ جَلَّ جَلَالُهُ', 'The Honourer, He is exalted!'),
+...createNameEntry('26', 'ٱلْمُذِلُّ جَلَّ جَلَالُهُ', 'The Dishonourer, He is exalted!'),
+...createNameEntry('27', 'ٱلسَّمِيعُ جَلَّ جَلَالُهُ', 'The All-Hearing, He is exalted!'),
+...createNameEntry('28', 'ٱلْبَصِيرُ جَلَّ جَلَالُهُ', 'The All-Seeing, He is exalted!'),
+...createNameEntry('29', 'ٱلْحَكَمُ جَلَّ جَلَالُهُ', 'The Judge, He is exalted!'),
+...createNameEntry('30', 'ٱلْعَدْلُ جَلَّ جَلَالُهُ', 'The Just, He is exalted!'),
+
+...createNameEntry('31', 'ٱللَّطِيفُ جَلَّ جَلَالُهُ', 'The Subtle, He is exalted!'),
+...createNameEntry('32', 'ٱلْخَبِيرُ جَلَّ جَلَالُهُ', 'The All-Aware, He is exalted!'),
+...createNameEntry('33', 'ٱلْحَلِيمُ جَلَّ جَلَالُهُ', 'The Forbearing, He is exalted!'),
+...createNameEntry('34', 'ٱلْعَظِيمُ جَلَّ جَلَالُهُ', 'The Magnificent, He is exalted!'),
+...createNameEntry('35', 'ٱلْغَفُورُ جَلَّ جَلَالُهُ', 'The Forgiving, He is exalted!'),
+...createNameEntry('36', 'ٱلشَّكُورُ جَلَّ جَلَالُهُ', 'The Grateful, He is exalted!'),
+...createNameEntry('37', 'ٱلْعَلِىُّ جَلَّ جَلَالُهُ', 'The High, He is exalted!'),
+...createNameEntry('38', 'ٱلْكَبِيرُ جَلَّ جَلَالُهُ', 'The Great, He is exalted!'),
+...createNameEntry('39', 'ٱلْحَفِيظُ جَلَّ جَلَالُهُ', 'The Guardian, He is exalted!'),
+...createNameEntry('40', 'ٱلْمُقِيتُ جَلَّ جَلَالُهُ', 'The Nourisher, He is exalted!'),
+
+...createNameEntry('41', 'ٱلْحَسِيبُ جَلَّ جَلَالُهُ', 'The Reckoner, He is exalted!'),
+...createNameEntry('42', 'ٱلْجَلِيلُ جَلَّ جَلَالُهُ', 'The Majestic, He is exalted!'),
+...createNameEntry('43', 'ٱلْكَرِيمُ جَلَّ جَلَالُهُ', 'The Generous, He is exalted!'),
+...createNameEntry('44', 'ٱلرَّقِيبُ جَلَّ جَلَالُهُ', 'The Watcher, He is exalted!'),
+...createNameEntry('45', 'ٱلْمُجِيبُ جَلَّ جَلَالُهُ', 'The Answerer, He is exalted!'),
+...createNameEntry('46', 'ٱلْوَاسِعُ جَلَّ جَلَالُهُ', 'The Vast, He is exalted!'),
+...createNameEntry('47', 'ٱلْحَكِيمُ جَلَّ جَلَالُهُ', 'The Wise, He is exalted!'),
+...createNameEntry('48', 'ٱلْوَدُودُ جَلَّ جَلَالُهُ', 'The Loving, He is exalted!'),
+...createNameEntry('49', 'ٱلْمَجِيدُ جَلَّ جَلَالُهُ', 'The Glorious, He is exalted!'),
+...createNameEntry('50', 'ٱلْبَاعِثُ جَلَّ جَلَالُهُ', 'The Resurrector, He is exalted!'),
+
+...createNameEntry('51', 'ٱلشَّهِيدُ جَلَّ جَلَالُهُ', 'The Witness, He is exalted!'),
+...createNameEntry('52', 'ٱلْحَقُّ جَلَّ جَلَالُهُ', 'The Truth, He is exalted!'),
+...createNameEntry('53', 'ٱلْوَكِيلُ جَلَّ جَلَالُهُ', 'The Trustee, He is exalted!'),
+...createNameEntry('54', 'ٱلْقَوِىُّ جَلَّ جَلَالُهُ', 'The Strong, He is exalted!'),
+...createNameEntry('55', 'ٱلْمَتِينُ جَلَّ جَلَالُهُ', 'The Firm, He is exalted!'),
+...createNameEntry('56', 'ٱلْوَلِىُّ جَلَّ جَلَالُهُ', 'The Protecting Friend, He is exalted!'),
+...createNameEntry('57', 'ٱلْحَمِيدُ جَلَّ جَلَالُهُ', 'The Praiseworthy, He is exalted!'),
+...createNameEntry('58', 'ٱلْمُحْصِى جَلَّ جَلَالُهُ', 'The Counter, He is exalted!'),
+...createNameEntry('59', 'ٱلْمُبْدِئُ جَلَّ جَلَالُهُ', 'The Originator, He is exalted!'),
+...createNameEntry('60', 'ٱلْمُعِيدُ جَلَّ جَلَالُهُ', 'The Returner, He is exalted!'),
+
+...createNameEntry('61', 'ٱلْمُحْيِى جَلَّ جَلَالُهُ', 'The Reviver, He is exalted!'),
+...createNameEntry('62', 'ٱلْمُمِيتُ جَلَّ جَلَالُهُ', 'The Giver of Death, He is exalted!'),
+...createNameEntry('63', 'ٱلْحَىُّ جَلَّ جَلَالُهُ', 'The Living, He is exalted!'),
+...createNameEntry('64', 'ٱلْقَيُّومُ جَلَّ جَلَالُهُ', 'The Self-Sustaining, He is exalted!'),
+...createNameEntry('65', 'ٱلْوَاجِدُ جَلَّ جَلَالُهُ', 'The Perceiver, He is exalted!'),
+...createNameEntry('66', 'ٱلْمَاجِدُ جَلَّ جَلَالُهُ', 'The Illustrious, He is exalted!'),
+...createNameEntry('67', 'ٱلْوَاحِدُ جَلَّ جَلَالُهُ', 'The One, He is exalted!'),
+...createNameEntry('68', 'ٱلصَّمَدُ جَلَّ جَلَالُهُ', 'The Eternal, He is exalted!'),
+...createNameEntry('69', 'ٱلْقَادِرُ جَلَّ جَلَالُهُ', 'The All-Powerful, He is exalted!'),
+...createNameEntry('70', 'ٱلْمُقْتَدِرُ جَلَّ جَلَالُهُ', 'The Omnipotent, He is exalted!'),
+
+...createNameEntry('71', 'ٱلْمُقَدِّمُ جَلَّ جَلَالُهُ', 'The Advancer, He is exalted!'),
+...createNameEntry('72', 'ٱلْمُؤَخِّرُ جَلَّ جَلَالُهُ', 'The Deferrer, He is exalted!'),
+...createNameEntry('73', 'ٱلْأَوَّلُ جَلَّ جَلَالُهُ', 'The First, He is exalted!'),
+...createNameEntry('74', 'ٱلْآخِرُ جَلَّ جَلَالُهُ', 'The Last, He is exalted!'),
+...createNameEntry('75', 'ٱلظَّاهِرُ جَلَّ جَلَالُهُ', 'The Manifest, He is exalted!'),
+...createNameEntry('76', 'ٱلْبَاطِنُ جَلَّ جَلَالُهُ', 'The Hidden, He is exalted!'),
+...createNameEntry('77', 'ٱلْوَالِى جَلَّ جَلَالُهُ', 'The Patron, He is exalted!'),
+...createNameEntry('78', 'ٱلْمُتَعَالِى جَلَّ جَلَالُهُ', 'The Self-Exalted, He is exalted!'),
+...createNameEntry('79', 'ٱلْبَرُّ جَلَّ جَلَالُهُ', 'The Benign, He is exalted!'),
+...createNameEntry('80', 'ٱلتَّوَّابُ جَلَّ جَلَالُهُ', 'The Acceptor of Repentance, He is exalted!'),
+
+...createNameEntry('81', 'ٱلْمُنتَقِمُ جَلَّ جَلَالُهُ', 'The Avenger, He is exalted!'),
+...createNameEntry('82', 'ٱلْعَفُوُّ جَلَّ جَلَالُهُ', 'The Pardoner, He is exalted!'),
+...createNameEntry('83', 'ٱلرَّءُوفُ جَلَّ جَلَالُهُ', 'The Compassionate, He is exalted!'),
+...createNameEntry('84', 'مَالِكُ ٱلْمُلْكِ جَلَّ جَلَالُهُ', 'The Possessor of the Kingdom, He is exalted!'),
+...createNameEntry('85', 'ذُو ٱلْجَلَالِ وَٱلْإِكْرَامِ جَلَّ جَلَالُهُ', 'Lord of Majesty and Honour, He is exalted!'),
+...createNameEntry('86', 'ٱلْمُقْسِطُ جَلَّ جَلَالُهُ', 'The Equitable, He is exalted!'),
+...createNameEntry('87', 'ٱلْجَامِعُ جَلَّ جَلَالُهُ', 'The Gatherer, He is exalted!'),
+...createNameEntry('88', 'ٱلْغَنِىُّ جَلَّ جَلَالُهُ', 'The Rich, He is exalted!'),
+...createNameEntry('89', 'ٱلْمُغْنِى جَلَّ جَلَالُهُ', 'The Enricher, He is exalted!'),
+
+...createNameEntry('90', 'ٱلْمَانِعُ جَلَّ جَلَالُهُ', 'The Withholder, He is exalted!'),
+...createNameEntry('91', 'ٱلضَّارُّ جَلَّ جَلَالُهُ', 'The Afflicter, He is exalted!'),
+...createNameEntry('92', 'ٱلنَّافِعُ جَلَّ جَلَالُهُ', 'The Benefactor, He is exalted!'),
+...createNameEntry('93', 'ٱلنُّورُ جَلَّ جَلَالُهُ', 'The Light, He is exalted!'),
+...createNameEntry('94', 'ٱلْهَادِى جَلَّ جَلَالُهُ', 'The Guide, He is exalted!'),
+...createNameEntry('95', 'ٱلْبَدِيعُ جَلَّ جَلَالُهُ', 'The Originator, He is exalted!'),
+...createNameEntry('96', 'ٱلْبَاقِى جَلَّ جَلَالُهُ', 'The Everlasting, He is exalted!'),
+...createNameEntry('97', 'ٱلْوَارِثُ جَلَّ جَلَالُهُ', 'The Heir, He is exalted!'),
+...createNameEntry('98', 'ٱلرَّشِيدُ جَلَّ جَلَالُهُ', 'The Guide to the Right Path, He is exalted!'),
+...createNameEntry('99', 'ٱلصَّبُورُ جَلَّ جَلَالُهُ', 'The Patient, He is exalted!')
+                ]
             }
           ]
         },
