--- a/index.html
+++ b/index.html
@@ -527,73 +527,73 @@
 { "type": "text", "text": "Allahumma Rabba hadhihid da‘watit tammati was salatil qa’imati, ati Muhammadan al wasilata wal fadilah, wad darajatar rafi‘ata, wab‘ath hu maqaman mahmudan alladhi wa‘adtahu, innaka la tukhliful mi‘ad." }
         ]
       },
-      {
-        "variant": "default",
-        "content": [
-          { "type": "section-title", "text": "Step by Step Salah (Simple Guide)" },
-          { "type": "text", "text": "1. Make wudu: Be clean and have wudu before starting salah." },
-          { "type": "text", "text": "2. Face the qiblah: Stand facing the direction of the Kaaba." },
-          { "type": "text", "text": "3. Make intention (niyyah): Say in your heart which salah you are praying (e.g., Zuhr, Asr). You do not say it out loud." },
-          { "type": "text", "text": "4. Start salah (takbir): Raise your hands to your ears and say: Allahu Akbar. Place your hands: Men: right hand over left, below the navel; Women: right hand over left, on the chest." },
-          { "type": "text", "text": "5. Read in standing (qiyaam): While standing, read: Surah Al Fatiha, then a short surah or 3 ayat." },
-          { "type": "text", "text": "6. Ruku (bowing): Say Allahu Akbar and bow. In ruku say at least 3 times: Subhana Rabbiyal Azim. Men: back straight, hands on knees; Women: bow gently, arms not spread." },
-          { "type": "text", "text": "7. Stand up from ruku: Rise and say: Sami‘Allahu liman hamidah. Then say: Rabbana lakal hamd. Stand straight for a moment." },
-          { "type": "text", "text": "8. Go to sajdah (prostration): Say Allahu Akbar and go down: Knees first, then hands, then forehead and nose on the ground. Say at least 3 times: Subhana Rabbiyal A‘la. Men: arms away from body; Women: arms close to body." },
-          { "type": "text", "text": "9. Sit between two sajdahs: Sit and say: Rabbighfir li. Then do the second sajdah the same way. This completes one rak‘ah." },
-          { "type": "text", "text": "10. Second rak‘ah: Stand up and repeat: Fatiha, short surah, ruku, sajdah (two times). After the second rak‘ah, sit and read: Attahiyyatu…" },
-          { "type": "text", "text": "11. Last rak‘ah (final sitting): In the last sitting, read: Attahiyyatu, Salawat (Durood), Rabbana atina or any dua." },
-          { "type": "text", "text": "12. End the salah: Turn your head to the right: Assalamu ‘alaykum wa rahmatullah. Then to the left: Assalamu ‘alaykum wa rahmatullah. Your salah is complete." }
-        ]
-      },
-      {
-        "variant": "default",
-        "content": [
-          { "type": "section-title", "text": "How to Pray 2 Raka‘at Sunnah of Fajr" },
-          { "type": "text", "text": "1. Face the qiblah and make intention: Stand facing the qiblah. Feet a little apart, standing calmly. In your heart, intend: “I am praying 2 raka‘at sunnah of Fajr for the sake of Allah.” Raise hands to ears and say: Allahu Akbar. Place right hand over left, below the navel." },
-          { "type": "text", "text": "2. Start recitation (first raka‘ah): While standing: Look at the place of sajdah. Read Subhanaka. Then A‘udhu billahi… and Bismillahir Rahmanir Rahim. Read Surah Al Fatiha. Then read another short surah, for example Surah Al Fil." },
-          { "type": "text", "text": "3. Ruku (bowing): Say Allahu Akbar and bow. Hands on knees, back straight, head in line with back. Look at your feet. Say at least 3 times: Subhana Rabbiyal Azim." },
-          { "type": "text", "text": "4. Stand up from ruku: Rise saying: Sami‘Allahu liman hamidah. Stand straight and say: Rabbana lakal hamd." },
-          { "type": "text", "text": "5. First sajdah: Say Allahu Akbar and go into sajdah: Right knee, Left knee, Right hand, Left hand, Nose and forehead on the ground. Toes bent towards qiblah, fingers together, hands near head. Say at least 3 times: Subhana Rabbiyal A‘la." },
-          { "type": "text", "text": "6. Sit between two sajdahs: Say Allahu Akbar and sit on left foot, right foot upright, toes towards qiblah. Hands on thighs near knees. Sit still for a moment (this is jalsa)." },
-          { "type": "text", "text": "7. Second sajdah: Say Allahu Akbar and go into sajdah again. Repeat Subhana Rabbiyal A‘la at least 3 times. This completes one rak‘ah." },
-          { "type": "text", "text": "8. Second raka‘ah: Stand up saying Allahu Akbar. Again read: Bismillah, Surah Al Fatiha, Another short surah. Do ruku, stand, first sajdah, sit, second sajdah the same way." },
-          { "type": "text", "text": "9. Final sitting (after second raka‘ah): After the second sajdah: Sit in the same posture (left foot flat, right foot upright). Read: Attahiyyatu, Allahumma salli ‘ala Muhammad…, Allahumma barik ‘ala Muhammad…, Rabbana atina… (or any dua)." },
-          { "type": "text", "text": "10. Finish the prayer (salam): Turn head to the right and say: Assalamu ‘alaykum wa rahmatullah. Then to the left and say the same. Your 2 raka‘at sunnah of Fajr is complete." },
-          { "type": "text", "text": "11. After the prayer (dhikr & dua): Say Astaghfirullah 3 times. Read Ayat al Kursi. Say: 33× SubhanAllah, 33× Alhamdulillah, 33× Allahu Akbar. Then La ilaha illa’Llahu wahdahu la sharika lah… once. Make dua with hands raised, then wipe hands over the face." }
-        ]
-      },
-      {
-        "variant": "default",
-        "content": [
-          { "type": "section-title", "text": "Sunnahs of Salah (Easy to Understand)" },
-          { "type": "text", "text": "Raising the hands up to the ears at the start of salah" },
-          { "type": "text", "text": "Turning the palms toward the qiblah when raising the hands" },
-          { "type": "text", "text": "Holding the left wrist with the right hand after the opening takbir" },
-          { "type": "text", "text": "Placing the right hand over the left" },
-          { "type": "text", "text": "Men: hands below the navel — Women: hands on the chest" },
-          { "type": "text", "text": "Reading Subhanaka after the opening takbir" },
-          { "type": "text", "text": "The imam or a person praying alone saying A‘udhu billahi…" },
-          { "type": "text", "text": "Saying Bismillah before reciting" },
-          { "type": "text", "text": "Saying Subhana Rabbiyal Azim three times in ruku" },
-          { "type": "text", "text": "Saying Subhana Rabbiyal A‘la three times in sajdah" },
-          { "type": "text", "text": "Reading Allahumma salli… and Allahumma barik… in the final sitting" },
-          { "type": "text", "text": "Looking to the right and left when giving salam" },
-          { "type": "text", "text": "The imam reading a longer surah in the first raka‘ah than in the second (except Jumu‘ah and Eid)" },
-          { "type": "text", "text": "The imam and a person praying alone saying Sami‘Allahu liman hamidah when rising from ruku" },
-          { "type": "text", "text": "Saying Rabbana lakal hamd after standing straight" },
-          { "type": "text", "text": "Bending the toes in sajdah so they point toward the qiblah" },
-          { "type": "text", "text": "Saying Allahu Akbar when going into ruku, going into sajdah, and rising from sajdah" },
-          { "type": "text", "text": "Placing the hands and knees on the ground properly in sajdah" },
-          { "type": "text", "text": "Keeping the heels slightly apart while standing, and together in ruku, qawmah, and sajdah" },
-          { "type": "text", "text": "Saying Ameen softly after Surah Al Fatiha" },
-          { "type": "text", "text": "Opening the fingers and holding the knees in ruku" },
-          { "type": "text", "text": "Sitting between the two sajdahs" },
-          { "type": "text", "text": "Men sitting with the right foot upright and the left foot flat underneath" }
-        ]
-      },
-      {
-        "variant": "default",
-        "content": [
+{
+    "variant": "default",
+    "content": [
+      { "type": "section-title", "text": "Step by Step Salah (Simple Guide)" },
+      { "type": "text", "text": "1. Make wudu: Be clean and have wudu before starting salah." },
+      { "type": "text", "text": "2. Face the qiblah: Stand facing the direction of the Kaaba." },
+      { "type": "text", "text": "3. Make intention (niyyah): Say in your heart which salah you are praying (e.g., Zuhr, Asr). You do not say it out loud." },
+      { "type": "text", "text": "4. Start salah (takbir): Raise your hands to your ears and say: Allahu Akbar. Place your hands: Men: right hand over left, below the navel; Women: right hand over left, on the chest." },
+      { "type": "text", "text": "5. Read in standing (qiyaam): While standing, read: Surah Al Fatiha, then a short surah or 3 ayat." },
+      { "type": "text", "text": "6. Ruku (bowing): Say Allahu Akbar and bow. In ruku say at least 3 times: Subhana Rabbiyal Azim (Glory be to my Rabb, the Magnificent). Men: back straight, hands on knees; Women: bow gently, arms not spread." },
+      { "type": "text", "text": "7. Stand up from ruku: Rise and say: Sami‘Allahu liman hamidah (Allah hears those who praise Him). Then say: Rabbana lakal hamd (Our Rabb, all praise is for You). Stand straight for a moment." },
+      { "type": "text", "text": "8. Go to sajdah (prostration): Say Allahu Akbar and go down: Knees first, then hands, then forehead and nose on the ground. Say at least 3 times: Subhana Rabbiyal A‘la (Glory be to my Rabb, the Most High). Men: arms away from body; Women: arms close to body." },
+      { "type": "text", "text": "9. Sit between two sajdahs: Sit and say: Rabbighfir li (My Rabb, forgive me). Then do the second sajdah the same way. This completes one rak‘ah." },
+      { "type": "text", "text": "10. Second rak‘ah: Stand up and repeat: Fatiha, short surah, ruku, sajdah (two times). After the second rak‘ah, sit and read: Attahiyyatu…" },
+      { "type": "text", "text": "11. Last rak‘ah (final sitting): In the last sitting, read: Attahiyyatu, Salawat (Durood), Rabbana atina (Our Rabb, give us) or any dua." },
+      { "type": "text", "text": "12. End the salah: Turn your head to the right: Assalamu ‘alaykum wa rahmatullah. Then to the left: Assalamu ‘alaykum wa rahmatullah. Your salah is complete." }
+    ]
+  },
+  {
+    "variant": "default",
+    "content": [
+      { "type": "section-title", "text": "How to Pray 2 Raka‘at Sunnah of Fajr" },
+      { "type": "text", "text": "1. Face the qiblah and make intention: Stand facing the qiblah. Feet a little apart, standing calmly. In your heart, intend: “I am praying 2 raka‘at sunnah of Fajr for the sake of Allah.” Raise hands to ears and say: Allahu Akbar. Place right hand over left, below the navel." },
+      { "type": "text", "text": "2. Start recitation (first raka‘ah): While standing: Look at the place of sajdah. Read Subhanaka. Then A‘udhu billahi… and Bismillahir Rahmanir Rahim. Read Surah Al Fatiha. Then read another short surah, for example Surah Al Fil." },
+      { "type": "text", "text": "3. Ruku (bowing): Say Allahu Akbar and bow. Hands on knees, back straight, head in line with back. Look at your feet. Say at least 3 times: Subhana Rabbiyal Azim (Glory be to my Rabb, the Magnificent)." },
+      { "type": "text", "text": "4. Stand up from ruku: Rise saying: Sami‘Allahu liman hamidah (Allah hears those who praise Him). Stand straight and say: Rabbana lakal hamd (Our Rabb, all praise is for You)." },
+      { "type": "text", "text": "5. First sajdah: Say Allahu Akbar and go into sajdah: Right knee, Left knee, Right hand, Left hand, Nose and forehead on the ground. Toes bent towards qiblah, fingers together, hands near head. Say at least 3 times: Subhana Rabbiyal A‘la (Glory be to my Rabb, the Most High)." },
+      { "type": "text", "text": "6. Sit between two sajdahs: Say Allahu Akbar and sit on left foot, right foot upright, toes towards qiblah. Hands on thighs near knees. Sit still for a moment (this is jalsa)." },
+      { "type": "text", "text": "7. Second sajdah: Say Allahu Akbar and go into sajdah again. Repeat Subhana Rabbiyal A‘la (Glory be to my Rabb, the Most High) at least 3 times. This completes one rak‘ah." },
+      { "type": "text", "text": "8. Second raka‘ah: Stand up saying Allahu Akbar. Again read: Bismillah, Surah Al Fatiha, Another short surah. Do ruku, stand, first sajdah, sit, second sajdah the same way." },
+      { "type": "text", "text": "9. Final sitting (after second raka‘ah): After the second sajdah: Sit in the same posture (left foot flat, right foot upright). Read: Attahiyyatu, Allahumma salli ‘ala Muhammad…, Allahumma barik ‘ala Muhammad…, Rabbana atina (Our Rabb, give us)… (or any dua)." },
+      { "type": "text", "text": "10. Finish the prayer (salam): Turn head to the right and say: Assalamu ‘alaykum wa rahmatullah. Then to the left and say the same. Your 2 raka‘at sunnah of Fajr is complete." },
+      { "type": "text", "text": "11. After the prayer (dhikr & dua): Say Astaghfirullah 3 times. Read Ayat al Kursi. Say: 33× SubhanAllah, 33× Alhamdulillah, 33× Allahu Akbar. Then La ilaha illa’Llahu wahdahu la sharika lah… once. Make dua with hands raised, then wipe hands over the face." }
+    ]
+  },
+  {
+    "variant": "default",
+    "content": [
+      { "type": "section-title", "text": "Sunnahs of Salah (Easy to Understand)" },
+      { "type": "text", "text": "Raising the hands up to the ears at the start of salah" },
+      { "type": "text", "text": "Turning the palms toward the qiblah when raising the hands" },
+      { "type": "text", "text": "Holding the left wrist with the right hand after the opening takbir" },
+      { "type": "text", "text": "Placing the right hand over the left" },
+      { "type": "text", "text": "Men: hands below the navel — Women: hands on the chest" },
+      { "type": "text", "text": "Reading Subhanaka after the opening takbir" },
+      { "type": "text", "text": "The imam or a person praying alone saying A‘udhu billahi…" },
+      { "type": "text", "text": "Saying Bismillah before reciting" },
+      { "type": "text", "text": "Saying Subhana Rabbiyal Azim (Glory be to my Rabb, the Magnificent) three times in ruku" },
+      { "type": "text", "text": "Saying Subhana Rabbiyal A‘la (Glory be to my Rabb, the Most High) three times in sajdah" },
+      { "type": "text", "text": "Reading Allahumma salli… and Allahumma barik… in the final sitting" },
+      { "type": "text", "text": "Looking to the right and left when giving salam" },
+      { "type": "text", "text": "The imam reading a longer surah in the first raka‘ah than in the second (except Jumu‘ah and Eid)" },
+      { "type": "text", "text": "The imam and a person praying alone saying Sami‘Allahu liman hamidah (Allah hears those who praise Him) when rising from ruku" },
+      { "type": "text", "text": "Saying Rabbana lakal hamd (Our Rabb, all praise is for You) after standing straight" },
+      { "type": "text", "text": "Bending the toes in sajdah so they point toward the qiblah" },
+      { "type": "text", "text": "Saying Allahu Akbar when going into ruku, going into sajdah, and rising from sajdah" },
+      { "type": "text", "text": "Placing the hands and knees on the ground properly in sajdah" },
+      { "type": "text", "text": "Keeping the heels slightly apart while standing, and together in ruku, qawmah, and sajdah" },
+      { "type": "text", "text": "Saying Ameen softly after Surah Al Fatiha" },
+      { "type": "text", "text": "Opening the fingers and holding the knees in ruku" },
+      { "type": "text", "text": "Sitting between the two sajdahs" },
+      { "type": "text", "text": "Men sitting with the right foot upright and the left foot flat underneath" }
+    ]
+  },
+  {
+    "variant": "default",
+    "content": [
           { "type": "section-title", "text": "Extra Notes (Simple)" },
           { "type": "text", "text": "In Maghrib, short surahs are recited" },
           { "type": "text", "text": "In Fajr, the first raka‘ah is made longer than the second" },
