--- a/index.html
+++ b/index.html
@@ -2512,7 +2512,9 @@
                       </div>
                       <div className="mb-8 p-4 bg-black/20 rounded-2xl border border-[#C5A059]/10 max-h-[350px] overflow-y-auto">
                         <p className="text-[14px] text-white/90 leading-relaxed text-center mb-4">
-                          Thank you for using this app. This app was created to make daily worship easier. In our busy lives, we often pray salah but forget to make duʿāʾ or dhikr, and many supplications are hard to remember. This app collects important duʿāʾs in one place, including duʿāʾs after salah and duʿāʾs of the Prophet Muhammad ﷺ, so they are easy to read anytime on your phone.
+                          Thank you for using this app.
+This app was created to support daily worship by providing easy access to a collection of important duʿāʾs and dhikr. It includes duʿāʾs after ṣalāh as well as authentic supplications of the Prophet Muhammad ﷺ, all gathered in one place for convenience.
+The app is designed to help users read and benefit from these supplications anytime on their phone, making them readily available whenever needed.
                         </p>
                         <p className="text-[13px] italic text-[#C5A059] leading-relaxed text-center mb-6">
                           May Allah forgive any mistakes, accept this effort, and grant its reward to my family who have passed away and to all Muslims, through the wasilah of Prophet Muhammad ﷺ, and as sadaqah in the name of Shaykh Abdul Qadir Jilani (rahimahullah)
